--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,94 @@
-.body{
+/* ###########################
+ * ### General information ###
+ * ###########################
+ * Everything is found in chronological order according to site view in this CSS file.
+ * 
+ */
+
+/**********
+ * General *
+ **********/
+
+.body {
     background-color: black;
 }
 
-
-
-
-.contactField{
-    width: 450px;
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-
-
-.econSec:hover {
-    
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
 
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
 
-/* Donation.html */
+.dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
+    background-color: rgb(233, 75, 75);
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.show {
+    display: block;
+}
+
+/**********
+ * Economy *
+ **********/
+
+.econSec:hover {}
+
+/**********
+ * Health *
+ **********/
+
+/**********
+ * Donation *
+ **********/
+
 div.davidInit {
     color: #ff9999;
     width: 46em;
@@ -25,19 +97,31 @@ div.davidInit {
     margin-right: auto;
 }
 
-h1.h1David{
+h1.h1David {
     color: aquamarine;
 }
 
-#imgDavid{
+#imgDavid {
     height: auto;
-    width:60%;
+    width: 60%;
 }
 
-#imgBitcoin{
+#imgBitcoin {
     /* position: relative; */
-    height:1em;
-    width:1em;
-    vertical-align:text-top;
+    height: 1em;
+    width: 1em;
+    vertical-align: text-top;
     /* flex-shrink: 10; */
+}
+
+/**********
+ * About *
+ **********/
+
+/**********
+ * Contact *
+ **********/
+
+.contactField {
+    width: 450px;
 }
